--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- linked with css -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- header start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mb-5">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" class="d-inline-block align-text-top">
@@ -28,35 +31,35 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link " href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <!-- image slider -->
-        <section class="container">
+        <!-- image slider carousel-->
+        <section class="container shadow-lg" id="home">
             <d id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
 
-                        <div class="row bg-secondary bg-gradient p-5 border d-flex align-items-center">
+                        <div class="row panda-background-color p-5 border d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mi LED TV 4A PRO 32</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.</p>
                                 <h1>$1200</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn button-color">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -66,13 +69,13 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-secondary bg-gradient p-5 border d-flex align-items-center">
+                        <div class="row panda-background-color p-5 border d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
                                 <h1>$420</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn button-color">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -80,13 +83,13 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-secondary bg-gradient p-5 border d-flex align-items-center">
+                        <div class="row panda-background-color bg-gradient p-5 border d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Xbox for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in
                                     fake world.</p>
                                 <h1>$600</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn button-color">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -112,11 +115,11 @@
 
     <main>
         <!-- Catagories -->
-        <section class="container my-5">
+        <section class="container my-5 categories">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div
-                        class="p-3 border bg-warning d-flex align-items-center border rounded-3 justify-content-between">
+                        class="p-3 border watch-color d-flex align-items-center border rounded-3 justify-content-between shadow-lg">
                         <h1 class="text-white">Watch</h1>
                         <img src="images/categories/watch.png" alt="">
                     </div>
@@ -124,7 +127,7 @@
 
                 <div class="col-lg-4 col-md-6 col-12">
                     <div
-                        class="p-3 border bg-success d-flex align-items-center border rounded-3 justify-content-between">
+                        class="p-3 border bag-color d-flex align-items-center border rounded-3 justify-content-between shadow-lg">
                         <h1 class="text-white">Bag</h1>
                         <img src="images/categories/bag.png" alt="">
                     </div>
@@ -132,7 +135,7 @@
 
                 <div class="col-lg-4 col-md-6 col-12">
                     <div
-                        class="p-3 border bg-primary d-flex align-items-center border rounded-3 justify-content-between">
+                        class="p-3 border shoe-color d-flex align-items-center border rounded-3 justify-content-between shadow-lg">
                         <h1 class="text-white">Shoes</h1>
                         <img src="images/categories/shoes.png" alt="">
                     </div>
@@ -142,12 +145,12 @@
 
         </section>
 
-        <!-- Shoes -->
-        <section class="container">
+        <!-- Shoes section-->
+        <section class="container" id="shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card h-100 border-0 shadow-lg">
+                    <div style="border-radius: 10px;" class="card h-100 border-0 shadow-lg">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Supply 350</h5>
@@ -156,13 +159,13 @@
                         </div>
                         <div class="m-3">
                             <h5>$120</h5>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn button-color">Buy Now</button>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card h-100 border-0 shadow-lg">
+                    <div style="border-radius: 10px;" class="card h-100 border-0 shadow-lg">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
@@ -171,13 +174,13 @@
                         </div>
                         <div class="m-3">
                             <h5>$350</h5>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn button-color">Buy Now</button>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card h-100 border-0 shadow-lg">
+                    <div style="border-radius: 10px;" class="card h-100 border-0 shadow-lg">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
@@ -187,7 +190,59 @@
                         </div>
                         <div class="m-3">
                             <h5>$580</h5>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn button-color">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- bags section-->
+        <section class="container" id="backpack">
+            <h1>Bags</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div style="border-radius: 10px;" class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content..</p>
+                        </div>
+                        <div class="m-3">
+                            <h5>$330</h5>
+                            <button class="btn button-color">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div style="border-radius: 10px;" class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <h5>$250</h5>
+                            <button class="btn button-color">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div style="border-radius: 10px;" class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <h5>$577</h5>
+                            <button class="btn button-color">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -195,9 +250,21 @@
         </section>
     </main>
 
+    <!-- Subscribe section -->
+    <section style="height: 400px;" id="subscribe"
+        class="container panda-background-color d-flex justify-content-center align-items-center rounded-3">
+        <div>
+            <h1>LET'S STAY IN TOUCH</h1>
+            <p>Get updates on sales, specials and more</p>
+            <input class="form-control" type="text" placeholder="Your Email">
+            <br>
+            <button class="btn button-color">Submit</button>
+        </div>
+    </section>
 
-    <footer>
 
+    <footer class="mt-5 text-center" id="subscribe">
+        <p><small> ©2020. Panda Commerce. All rights reserved. Mehruz Saif, Bangladesh.</small></p>
     </footer>
 
 
