--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             </div>
         </nav>
 
+        <br>
+        <br>
+        <br>
+
         <!-- image slider carousel-->
         <section class="container shadow-lg" id="home">
             <d id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -82,6 +86,8 @@
                             </div>
                         </div>
                     </div>
+
+
                     <div class="carousel-item">
                         <div class="row panda-background-color bg-gradient p-5 border d-flex align-items-center">
                             <div class="col-lg-7">
@@ -108,9 +114,8 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </d </section>
-
+            <!-- image slider carousel end-->
     </header>
-
 
 
     <main>
